# sdb

./: Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.demo  Dockerfile.rails_demo  Gemfile  README.md  Rakefile  sdb.gemspec
.github/workflows/: test.yml
document/: safety_argument.md
examples/: aggregrate.rb  benchmark.rb  demo.rb
ext/sdb/: Cargo.toml  extconf.rb
ext/sdb/src/: gvl.rs  helpers.rs  iseq_logger.rs  lib.rs  logger.rs  queue.rs  ruby_version.rs  stack_scanner.rs  symbolizer.rs  tester.rs  trace_id.rs
lib/: sdb.rb
lib/sdb/: helpers.rb  puma_patch.rb  rails_subscriber.rb  thread_patch.rb  version.rb
scripts/: benchmark.js  gc_compact.rb  handle_thread_reclaim.rb  on_cpu.py  on_cpu_example.rb  on_cpu_time.py  rails_demo.rb  tcp.py  thread_schedule.py
scripts/benchmark/: README.md
scripts/presentation/: basic.py  homeland.py
sdb-shim/: Cargo.toml  README.md  ssl_overwrite.c
sdb-shim/examples/: https_request.rb
sdb-shim/src/: https_instrument.c  lib.rs
sig/: sdb.rbs
spec/: helpers_spec.rb  ruby_version_spec.rb  sdb_spec.rb  spec_helper.rb  stack_scanner_spec.rb
symbolizer/: example.rb  symbolizer.c  symbolizer.py  symbolizer_trigger.c
