[package]
name = "sdb"
version = "0.1.0"
edition = "2021"
authors = ["Mike Yang <yfractal@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
fast_log = "1.7.3"
libc = "0.2.155"
log = "0.4.22"
rb-sys = { version = "0.9.99", features = ["stable-api"]}
rbspy-ruby-structs = "0.24.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
ctrlc = "3.4"
